--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       playing fifa <span>/</span> drinking coffee <span>/</span> developing web apps
     </p>
     <p class="email">
-      <a href="mailto:hello@kyan.com?subject=hello from kyan.it webpage">hello<span>@</span>kyan.it</a>
+      <a href="mailto:hello@kyan.it?subject=hello from kyan.it webpage">hello<span>@</span>kyan.it</a>
     </p>
   </div>
 </body>
