no time for :soccer: and :coffee: :(

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="container">
     kyan<span>.</span>it
     <p>
-      playing fifa <span>/</span> drinking coffee <span>/</span> developing web apps
+      growing tech teams and organizations
     </p>
     <p class="email">
       <a href="mailto:hello@kyan.it?subject=hello from kyan.it webpage">hello<span>@</span>kyan.it</a>
