--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css' />
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <title>kyan.it</title>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-39053132-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-</head>
-<body>
-  <div id="container">
-    kyan<span>.</span>it
-    <p>
-      growing tech teams and organizations
-    </p>
-    <p class="email">
-      <a href="mailto:hello@kyan.it?subject=hello from kyan.it webpage">hello<span>@</span>kyan.it</a>
-    </p>
-  </div>
-</body>
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>kyan.it</title>
+  </head>
+  <body>
+    <div id="container">
+      kyan<span>.</span>it
+      <p>growing tech teams and organizations</p>
+      <p class="email">
+        <a href="mailto:hello@kyan.it?subject=hello from kyan.it webpage"
+          >hello<span>@</span>kyan.it</a
+        >
+      </p>
+    </div>
+  </body>
 </html>
